--- a/ComplexNet/ComplexNet.vcxproj.filters
+++ b/ComplexNet/ComplexNet.vcxproj.filters
@@ -142,6 +142,15 @@
     <ClInclude Include="NetFileSaveAs.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="controllability.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="DlgDrivers.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="Synchronization.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ComplexNet.cpp">
@@ -193,6 +202,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="NetFileSaveAs.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="controllability.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DlgDrivers.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Synchronization.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
